docs: Add function docstrings.

--- a/solution.ipynb
+++ b/solution.ipynb
@@ -41,14 +41,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 59,
    "id": "30dc9473",
    "metadata": {},
    "outputs": [],
    "source": [
     "import datetime\n",
     "from pathlib import Path\n",
-    "\n",
+    "from typing import Any\n",
     "import airportsdata as airdata\n",
     "import datetime\n",
     "import folium\n",
@@ -2279,7 +2279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 60,
    "id": "5402c33c",
    "metadata": {},
    "outputs": [
@@ -2315,16 +2315,16 @@
        "      <th>Des-O</th>\n",
        "      <th>Emp-O</th>\n",
        "      <th>...</th>\n",
-       "      <th>AÑO</th>\n",
-       "      <th>DIANOM</th>\n",
-       "      <th>TIPOVUELO</th>\n",
-       "      <th>OPERA</th>\n",
-       "      <th>SIGLAORI</th>\n",
-       "      <th>SIGLADES</th>\n",
-       "      <th>city_i</th>\n",
        "      <th>name_i</th>\n",
        "      <th>city_o</th>\n",
        "      <th>name_o</th>\n",
+       "      <th>airline_i</th>\n",
+       "      <th>airline_o</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>lon</th>\n",
+       "      <th>temporada_alta</th>\n",
+       "      <th>atraso_15</th>\n",
+       "      <th>periodo_dia</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -2341,16 +2341,16 @@
        "      <td>SCQP</td>\n",
        "      <td>SKU</td>\n",
        "      <td>...</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>Martes</td>\n",
-       "      <td>N</td>\n",
-       "      <td>Sky Airline</td>\n",
-       "      <td>Santiago</td>\n",
-       "      <td>Temuco</td>\n",
-       "      <td>Puerto Montt</td>\n",
        "      <td>El Tepual Airport</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
+       "      <td>Sky Airline</td>\n",
+       "      <td>Sky Airline</td>\n",
+       "      <td>-38.900000</td>\n",
+       "      <td>-72.6000</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>noche</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1463</th>\n",
@@ -2365,16 +2365,16 @@
        "      <td>SCQP</td>\n",
        "      <td>SKU</td>\n",
        "      <td>...</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>Domingo</td>\n",
-       "      <td>N</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
        "      <td>Sky Airline</td>\n",
-       "      <td>Santiago</td>\n",
-       "      <td>Temuco</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
+       "      <td>Sky Airline</td>\n",
+       "      <td>-38.900000</td>\n",
+       "      <td>-72.6000</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>mañana</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7520</th>\n",
@@ -2389,16 +2389,16 @@
        "      <td>SCQP</td>\n",
        "      <td>SKU</td>\n",
        "      <td>...</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>Lunes</td>\n",
-       "      <td>N</td>\n",
-       "      <td>Sky Airline</td>\n",
-       "      <td>Santiago</td>\n",
-       "      <td>Temuco</td>\n",
-       "      <td>Concepcion</td>\n",
        "      <td>Carriel Sur Airport</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
+       "      <td>Sky Airline</td>\n",
+       "      <td>Sky Airline</td>\n",
+       "      <td>-38.900000</td>\n",
+       "      <td>-72.6000</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>mañana</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>55144</th>\n",
@@ -2413,20 +2413,20 @@
        "      <td>SEQM</td>\n",
        "      <td>LAN</td>\n",
        "      <td>...</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>Viernes</td>\n",
-       "      <td>I</td>\n",
-       "      <td>Grupo LATAM</td>\n",
-       "      <td>Santiago</td>\n",
-       "      <td>Quito</td>\n",
-       "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>Quito</td>\n",
        "      <td>Nuevo Aeropuerto Internacional Mariscal Sucre</td>\n",
+       "      <td>LATAM Chile</td>\n",
+       "      <td>LATAM Chile</td>\n",
+       "      <td>-0.129167</td>\n",
+       "      <td>-78.3575</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>noche</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>4 rows × 22 columns</p>\n",
+       "<p>4 rows × 29 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -2436,28 +2436,28 @@
        "7520  2017-02-27 06:40:00     71  SCEL  SCIE   SKU 2017-02-27 09:07:00     71   \n",
        "55144 2017-10-06 00:55:00   1260  SCEL  SEQU   LAN 2017-10-06 02:15:00   1260   \n",
        "\n",
-       "      Ori-O Des-O Emp-O  ...   AÑO   DIANOM  TIPOVUELO        OPERA  SIGLAORI  \\\n",
-       "1397   SCEL  SCQP   SKU  ...  2017   Martes          N  Sky Airline  Santiago   \n",
-       "1463   SCEL  SCQP   SKU  ...  2017  Domingo          N  Sky Airline  Santiago   \n",
-       "7520   SCEL  SCQP   SKU  ...  2017    Lunes          N  Sky Airline  Santiago   \n",
-       "55144  SCEL  SEQM   LAN  ...  2017  Viernes          I  Grupo LATAM  Santiago   \n",
+       "      Ori-O Des-O Emp-O  ...               name_i  city_o  \\\n",
+       "1397   SCEL  SCQP   SKU  ...    El Tepual Airport    None   \n",
+       "1463   SCEL  SCQP   SKU  ...                 None    None   \n",
+       "7520   SCEL  SCQP   SKU  ...  Carriel Sur Airport    None   \n",
+       "55144  SCEL  SEQM   LAN  ...                 None   Quito   \n",
        "\n",
-       "      SIGLADES        city_i               name_i city_o  \\\n",
-       "1397    Temuco  Puerto Montt    El Tepual Airport   None   \n",
-       "1463    Temuco          None                 None   None   \n",
-       "7520    Temuco    Concepcion  Carriel Sur Airport   None   \n",
-       "55144    Quito          None                 None  Quito   \n",
+       "                                              name_o    airline_i  \\\n",
+       "1397                                            None  Sky Airline   \n",
+       "1463                                            None  Sky Airline   \n",
+       "7520                                            None  Sky Airline   \n",
+       "55144  Nuevo Aeropuerto Internacional Mariscal Sucre  LATAM Chile   \n",
        "\n",
-       "                                              name_o  \n",
-       "1397                                            None  \n",
-       "1463                                            None  \n",
-       "7520                                            None  \n",
-       "55144  Nuevo Aeropuerto Internacional Mariscal Sucre  \n",
+       "         airline_o        lat      lon temporada_alta atraso_15 periodo_dia  \n",
+       "1397   Sky Airline -38.900000 -72.6000           True      True       noche  \n",
+       "1463   Sky Airline -38.900000 -72.6000           True     False      mañana  \n",
+       "7520   Sky Airline -38.900000 -72.6000           True      True      mañana  \n",
+       "55144  LATAM Chile  -0.129167 -78.3575          False      True       noche  \n",
        "\n",
-       "[4 rows x 22 columns]"
+       "[4 rows x 29 columns]"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2466,15 +2466,16 @@
     "airport_codes = airdata.load()  # Library with airport ICAO codes\n",
     "\n",
     "\n",
-    "def get_data_by_icao(x: str, key: str, codes: dict):\n",
+    "def get_data_by_icao(x: str, key: str, codes: dict) -> Any:\n",
     "    \"\"\"\n",
     "    Get airport/airline data based on its ICAO code.\n",
     "    :param x: ICAO code to be found.\n",
-    "    :param key: Field of the airport to get (e.g. name, latitude, city, etc).\n",
+    "    :param key: Field of the airport/airline to get (e.g. name, latitude, city, etc).\n",
     "    :param codes: Lookup table (dict) with ICAO codes as keys and a dictionary with that code's metadata as values\n",
     "    (e.g. airline name, airport name or any field contained in the codes dict).\n",
-    "    :return: Returns the desired key for specified ICAO code, if the code isn't in codes dict or the field doesn't exist\n",
-    "    for the specific code it returns None. The type of the output can be whatever is inside the dict (str, float, int, etc).\n",
+    "    :return: Returns the desired key for specified ICAO code, if the code isn't in codes dict or the field\n",
+    "    doesn't exist for the specific code it returns None. The type of the output can be whatever is inside\n",
+    "    the dict (str, float, int, etc).\n",
     "    \"\"\"\n",
     "    try:\n",
     "        icao_data = codes[x]\n",
@@ -6375,8 +6376,8 @@
     "def geoplot(data: pd.DataFrame) -> folium.Map:\n",
     "    \"\"\"\n",
     "    Plot map with flight cities locations.\n",
-    "    :param df: Dataframe with geographic data (lat, lon) for each city\n",
-    "    :return: Folium map object\n",
+    "    :param data: Dataframe with geographic data (lat, lon) for each city.\n",
+    "    :return: Folium map object.\n",
     "    \"\"\"\n",
     "    sw = data[['lat', 'lon']].min().values.tolist()\n",
     "    ne = data[['lat', 'lon']].max().values.tolist()\n",
@@ -6447,6 +6448,11 @@
    "outputs": [],
    "source": [
     "def is_peak_season(date: datetime.datetime) -> bool:\n",
+    "    \"\"\"\n",
+    "    Check whether input date is peak season or not.\n",
+    "    :param data: Input date.\n",
+    "    :return: True if date is peak season, False otherwise.\n",
+    "    \"\"\"\n",
     "    peaks = {'1':{'start': datetime.datetime(date.year, 1, 1),\n",
     "                  'stop': datetime.datetime(date.year, 3, 3, 23, 59, 59)},\n",
     "             '2':{'start': datetime.datetime(date.year, 7, 15),\n",
@@ -6499,23 +6505,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 61,
    "id": "34bf3b7c",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_day_period(date: datetime.datetime) -> str:\n",
+    "    \"\"\"\n",
+    "    Check day period of a given date.\n",
+    "    :param date: Input date.\n",
+    "    :return: String indicating the day period, either 'mañana' (morning), 'tarde' (evening) or 'noche' (night).\n",
+    "    \"\"\"\n",
     "    if 5 <= date.hour <= 11:\n",
     "        return 'mañana'\n",
     "    elif 12 <= date.hour <= 18:\n",
     "        return 'tarde'\n",
-    "    else:\n",
-    "        return 'noche'"
+    "    return 'noche'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 62,
    "id": "b1ea7837",
    "metadata": {},
    "outputs": [],
@@ -6533,7 +6543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 63,
    "id": "12dabedc",
    "metadata": {},
    "outputs": [],
@@ -6544,7 +6554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 64,
    "id": "dc252248",
    "metadata": {},
    "outputs": [],
@@ -6566,7 +6576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 65,
    "id": "ecc3f518",
    "metadata": {},
    "outputs": [
@@ -6697,7 +6707,7 @@
        "[62 rows x 4 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6712,7 +6722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 66,
    "id": "eec7750a",
    "metadata": {},
    "outputs": [
