feat: Concluding remarks.

--- a/solution.ipynb
+++ b/solution.ipynb
@@ -7599,7 +7599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5626866",
+   "id": "77cc58be",
    "metadata": {},
    "source": [
     "Go to File -> Trust Notebook to see the plot above."
@@ -11493,6 +11493,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0901a59b",
+   "metadata": {},
+   "source": [
+    "Recordemos que las clases son desbalanceadas, cerca del 20% de datos son de atraso, mientras que le 80% restante son vuelos a tiempo. Dado que nos interesa más optimizar los resultados sobre atraso, las métricas de precision, recall y f1-score que se muestran son para la clase atraso (atraso_15 = 1).\n",
+    "\n",
+    "### 6.4.2 Análisis de resultados\n",
+    "**Evalúa tu modelo. ¿Qué performance tiene? ¿Qué métricas usaste para evaluar esa performance y por qué? ¿Por qué\n",
+    "elegiste ese algoritmo en particular? ¿Qué variables son las que más influyen en la predicción? ¿Cómo podrías mejorar la\n",
+    "performance?**\n",
+    "\n",
+    "\n",
+    "- Como se ve en el gráfico, medir accuracy no es una buena métrica pues los tres modelos tienen un desmpeño similar, cercano al 80% que justamente corresponde a la proporción de la clase mayoritaria. Un modelo que simplemente fuera random.random() > 0.8 tendría el mismo accuracy.\n",
+    "\n",
+    "\n",
+    "- El resto de métricas nos sirven más para comprender el desmpeño de los modelos, en particular el AUC Y F1-score. Este última específicamente es útil cuando se tienen clases desbalanceadas pues tiene en cuenta precision y recall.\n",
+    "\n",
+    "\n",
+    "- Se observa que la MLP y LGBM funcionan mejor, en particular MPL consigue el f1-score mayor de 0.75. No obstante, LGBM tiene mejor AUC, por lo que podría decirse que el desmpeño de ambos modelos es similar, aunque LGBM tiene la ventaja de entregar la importancia de las columnas. De todas formas, estos resultados no son mucho mejores que la regresión logística.\n",
+    "\n",
+    "\n",
+    "- La regresión logística la elegí porque es de los modelos más sencillos (otra opción podría ser navie bayes) y sirve para tener un baseline y no partir usando un modelo excesivamente complejo. LightGBM lo utilicé porque me permite además de clasificar, obtener la importancia de las variables, lo cual puede ser útil para feature engineering. En particular se obtiene el mes, aerolínea y destino son las más importantes. Finalmente, probé redes neuronales pues son altamente optimizables, el modelo se puede complejizar y bastante con distintas arquitecturas y usando grid searching (no tuve tiempo de hacerlo ahora).\n",
+    "\n",
+    "\n",
+    "- Una forma de mejorar el modelo sería agregando nuevas columnas, una que podría ser obtenible son las condiciones meteorológicas del destino. Además, como se mencionó antes, hacer feature selection con LightGBM para luego alimentar otro modelo podría mejorar el desempeño, otra opción sería reducir y transformar variables usand PCA. En esta línea, se podría probar un ensamble de modelos, en vez de entrenar modelos independientes."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 88,
    "id": "98079bc6",
@@ -11610,8 +11638,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 90,
+   "id": "ff8b2d54",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'asdf' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [90]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43masdf\u001b[49m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'asdf' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "asdf"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "c2cf10da",
+   "id": "290534d3",
    "metadata": {},
    "outputs": [],
    "source": []
