--- a/solution.ipynb
+++ b/solution.ipynb
@@ -69,6 +69,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "f80125f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pandas==1.4.3\n",
+      "airportsdata==20220805\n",
+      "matplotlib==3.5.2\n",
+      "seaborn==0.11.2\n",
+      "folium==0.12.1.post1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'pandas=={pd.__version__}')\n",
+    "print(f'airportsdata=={airdata.__version__}')\n",
+    "import matplotlib\n",
+    "print(f'matplotlib=={matplotlib.__version__}')\n",
+    "print(f'seaborn=={sns.__version__}')\n",
+    "print(f'folium=={folium.__version__}')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "7c8c3e15",
    "metadata": {},
