fix: Add versions to notebook.

--- a/solution.ipynb
+++ b/solution.ipynb
@@ -41,6 +41,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 100,
+   "id": "784ae800",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pandas==1.4.3\n",
+      "numpy==1.23.1\n",
+      "airportsdata==20220805\n",
+      "matplotlib==3.5.2\n",
+      "seaborn==0.11.2\n",
+      "folium==0.12.1.post1\n",
+      "scikit-learn==1.1.2\n",
+      "lgbm==3.3.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'pandas=={pd.__version__}')\n",
+    "print(f'numpy=={np.__version__}')\n",
+    "print(f'airportsdata=={airdata.__version__}')\n",
+    "import matplotlib\n",
+    "print(f'matplotlib=={matplotlib.__version__}')\n",
+    "print(f'seaborn=={sns.__version__}')\n",
+    "print(f'folium=={folium.__version__}')\n",
+    "import sklearn\n",
+    "print(f'scikit-learn=={sklearn.__version__}')\n",
+    "print(f'lgbm=={lgbm.__version__}')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "30dc9473",
    "metadata": {},
@@ -66,33 +100,6 @@
     "from sklearn.svm import SVC\n",
     "\n",
     "sns.set_theme()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
-   "id": "f80125f7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pandas==1.4.3\n",
-      "airportsdata==20220805\n",
-      "matplotlib==3.5.2\n",
-      "seaborn==0.11.2\n",
-      "folium==0.12.1.post1\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(f'pandas=={pd.__version__}')\n",
-    "print(f'airportsdata=={airdata.__version__}')\n",
-    "import matplotlib\n",
-    "print(f'matplotlib=={matplotlib.__version__}')\n",
-    "print(f'seaborn=={sns.__version__}')\n",
-    "print(f'folium=={folium.__version__}')"
    ]
   },
   {
